# owl-scheme

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  rustfmt.toml
src/: data.rs  error.rs  lib.rs  main.rs  stdlib.rs  util.rs  vm.rs
src/lexer/: error.rs  mod.rs
src/parsing/: error.rs  lexer.rs  mod.rs  parser.rs
src/std/: mod.rs
src/stdlib/: mod.rs
src/vm/: eval.rs
