[package]
name = "owl-scheme"
version = "0.1.0"
edition = "2021"
authors = ["Will Young <wil.wyo@gmail.com>"]

[dependencies]
gc = { version = "^0.5", features = ["derive"] }
log = "0.4.20"
prime_factorization = "1.0.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

